Fixed dark mode in `j-Form`.

--- a/j-Form/component.css
+++ b/j-Form/component.css
@@ -15,7 +15,7 @@
 .ui-form > nav { padding: 0 20px 0; border-top: 1px solid #E0E0E0; background-color: white; border-radius: 0 0 2px 2px; line-height: 65px; height: 65px; display: block; float: none; position: relative; }
 .ui-dark .ui-form > nav { background-color: #202020; border-top-color: #303030; }
 .ui-form > nav button { border: 0; margin: 15px 0 0; background-color: #F0F0F0; height: 34px; padding: 0 20px; color: black; cursor: pointer; font-family: Arial; line-height: 34px; vertical-align: middle; outline: 0; font-size: 14px; text-decoration: none; transition: all 0.3s; float: left; }
-.ui-dark .ui-form form button { border-color: #202020; background-color: #505050; color: #E0E0E0; }
+.ui-dark .ui-form nav button { border-color: #202020; background-color: #505050; color: #E0E0E0; }
 .ui-form > nav button i { width: 16px; }
 .ui-form > nav button:hover { opacity: 0.9; }
 .ui-form > nav button:active { background-color: #D0D0D0; }
